# Selection1C

./: CMakeLists.txt  README.md
Tests/: DeckRead.cpp  DeckRead_test1.txt  DeckRead_test2.txt  DeckRead_test3.txt
Tests/Utils/: Helpers.hpp
include/: Chain.hpp  Deck.hpp  DecksCompleted.hpp  MoveChains.hpp
src/: Deck.cpp  MoveChains.cpp  main.cpp
